# TwitchBotCpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  conanfile.txt  manifest  repositories.manifest
TwitchBotCpp/: CMakeLists.txt  Configuration.cpp  Configuration.h  Strategy.cpp  Strategy.h  TwitchBotCpp.cpp  TwitchChatClient.cpp  TwitchChatClient.h
TwitchBotCpp/cfg/: default.cfg
twitchbot/: .gitignore  buildfile  chat_client.cxx  chat_client.hxx  configuration.cxx  configuration.hxx  strategy.cxx  strategy.hxx  testscript  twitchbot.cxx
twitchbot/cfg/: default.cfg
